// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail component renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root Thumbnail-root-1"
    data-testid="default-thumbnail"
    style="background-color: rgb(51, 178, 233);"
    tabindex="0"
    type="button"
  >
    <span
      class="Thumbnail-accessibilityText-5"
    >
      Blue
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Thumbnail component renders disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root Thumbnail-root-22 Thumbnail-disabled-23 Mui-disabled"
    data-testid="default-thumbnail"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="Thumbnail-accessibilityText-26"
    >
      Black
    </span>
  </button>
</div>
`;

exports[`Thumbnail component renders selected 1`] = `
<div>
  <button
    class="MuiButtonBase-root Thumbnail-root-15 Thumbnail-selected-17 Thumbnail-selected-17"
    data-testid="default-thumbnail"
    tabindex="0"
    type="button"
  >
    <span
      class="Thumbnail-accessibilityText-19"
    >
      Black
    </span>
  </button>
</div>
`;

exports[`Thumbnail component renders with an image 1`] = `
<div>
  <button
    class="MuiButtonBase-root Thumbnail-root-29 Thumbnail-disabled-30 Mui-disabled"
    data-testid="default-thumbnail"
    disabled=""
    style="background-image: url(path-to-image);"
    tabindex="-1"
    type="button"
  >
    <span
      class="Thumbnail-accessibilityText-33"
    >
      Black
    </span>
  </button>
</div>
`;

exports[`Thumbnail component renders with large size 1`] = `
<div>
  <button
    class="MuiButtonBase-root Thumbnail-root-8 Thumbnail-large-11"
    data-testid="default-thumbnail"
    style="background-color: rgb(0, 0, 0);"
    tabindex="0"
    type="button"
  >
    <span
      class="Thumbnail-accessibilityText-12"
    >
      Black
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
